ページ幅を広げるように変更

--- a/config.toml
+++ b/config.toml
@@ -162,6 +162,8 @@ disqusShortname = ""
   # custom color
   baseColor = "#ae130c"
 
+  siteWidth = "1170px"
+
 
 # customize your available languages for your multi-lingual site
 # or delete one of the [Languages.xx] blocks to use the theme with only one supported language
