Hugoで生成したものはnewsディレクトリに格納するように変更

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 title = "News"
-baseURL = "http://www.ihpc.se.ritsumei.ac.jp/"
+baseURL = "http://www.ihpc.se.ritsumei.ac.jp/news"
 
 # Option 1 (recommended): adding the theme as a Hugo module
 #theme = "github.com/Lednerb/bilberry-hugo-theme/v4"
