markdown内でHTMLを使用可能に変更
unsafeとあるように、セキュリティリスクがありそう
記事をポストする前にチェックを厳格にする必要がありそう

--- a/config.toml
+++ b/config.toml
@@ -178,7 +178,7 @@ disqusShortname = ""
   [markup.goldmark]
     [markup.goldmark.renderer]
       # change to 'true' if you need to render raw HTML within your markdown content
-      unsafe = false
+      unsafe = true
   [markup.highlight]
     anchorLineNos = false
     codeFences = true
