パーマリンクを生成するように変更

--- a/config.toml
+++ b/config.toml
@@ -19,6 +19,12 @@ googleAnalytics = ""
 # Enable / Disable comments on the articles via Disqus.
 disqusShortname = ""
 
+[permalinks]
+    achievement = "/:sections/:year/:month/:day/:slug/"
+    conference = "/:sections/:year/:month/:day/:slug/"
+    info = "/:sections/:year/:month/:day/:slug/"
+    paper = "/:sections/:year/:month/:day/:slug/"
+
 [params]
   # Custom CSS/JS modules that will be imported by the template.
   # Files are relative to the static/ directory or a URL.
